@@ -1,3 +1,6 @@
+Nov 3, 2002: Alex Burger <alex_b@users.sourceforge.net>
+- Add Test buttons to Preferences - Sound page
+
 Nov 02, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
 - fix saving of player info for rune, ut2 and tribes2
 - do not display a single slash when model and skin are empty
